--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * { 
     box-sizing: border-box;
     margin: 0;
@@ -5,9 +7,13 @@
 }
 
 body { 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif; 
     font-size: 24px;
 
+}
+
+h1, h2 { 
+    margin-bottom: 15px;
 }
 
 ul { 
@@ -20,12 +26,12 @@ ul {
 }
 
 .navbar .logo {
-    font-size: x-large;
+    font-size: 24px;
     font-weight: bold;
 }
 
 .navbar a {
-    color: #f9faf8;
+    color: #e5e7eb;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
@@ -38,7 +44,7 @@ ul {
 
 .navbar .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -48,4 +54,105 @@ ul {
 
 .navbar ul li {
     margin-left: 20px;
+}
+
+img {
+    max-width: 100%;
+}
+
+.header {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.header h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+
+}
+
+.header img {
+    max-width: 300px;
+    margin: 20px;
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.header button {
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: #3882f6;
+    color:  #f9faf8; 
+    font-size: 18px;
+    margin-top: 10px;
+    
+}
+
+
+.boxes .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.boxes h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+    margin: 30px auto;
+}
+
+.box {
+    flex: 1;
+    color: #e5e7eb;
+    text-align: center;
+    font-size: 18px;
+}
+
+.box img {
+    width: 150px;
+    height: 150px;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+}
+
+.quote  {
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    
+}
+
+
+.action .container{
+    display: flex;
+    background-color: #3882f6;
+    border-radius: 10px;
+    margin: 20px 50px;
+    padding: 50px;
+    font-size: 24px;
+    color: #f9faf8;
+
+
+}
+
+.action button {
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: #3882f6;
+    color:  #f9faf8; 
+    font-size: 18px;
+    border-color: #f9faf8;
+}
+
+.footer .container {
+    background-color: #1f2937;
 }
